--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -13,3 +13,13 @@ h1, h2, h3, h4 {
 	margin:0;
 	padding:0;
 }
+body {
+	background: url('/assets/stitched_wool.png');
+	font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+
+}
+.navbar.navbar-inverse {
+	background: url('/assets/noisy_net.png');
+	border-radius: 0;
+
+}
