--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,3 +1,4 @@
+
 <% @places.each do |place| %>
 	<div class="booyah-box col-xs-10 col-xs-offset-1"> 
 	  <h1><%= place.name %></h1>
@@ -5,3 +6,4 @@
 	  <p><%= place.description %></p><br />
 	</div>
 <% end %>
+<%= will_paginate @places %>
