--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -34,6 +34,9 @@ body {
 	border-radius: 3px;
 	padding: 8px;
 }
-      #map {
-        height: 300px;
-      }
+#map {
+    height: 300px;
+}
+.clear {
+	clear: both;
+}
