--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -35,8 +35,8 @@ function initMap() {
   	<% end %>
   </div>
 </div>
-
-<%= simple_form_for @comment, url: '#' do |f] %>
+<div class="clear"></div>
+<%= simple_form_for @comment, url: '#' do |f| %>
 	<%= f.input :message %>
 	<%= f.input :rating %>
 	<%= f.submit "Add a Comment", class: 'btn btn-primary' %>
