--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,3 @@
-
 <% @places.each do |place| %>
 	<div class="booyah-box col-xs-10 col-xs-offset-1"> 
 	  <h1><%= link_to place.name, place_path(place) %></h1>
@@ -9,6 +8,16 @@
 	  <% if place.user.present? %>
 	    <small><%= place.user.email %></small>
 	    <% end %>
+	  <% if place.comments.present? %>
+	  <div class="col-xs-12 col-sm-6">
+  		<blockquote>
+    	  <% if place.comments.last.humanized_rating.present? %>
+      		<b><%= place.comments.last.humanized_rating %></b> -
+    	  <% end %>
+          <%= place.comments.last.message %>
+          <small><%= place.comments.last.user.email %></small>
+  	    </blockquote>
 	</div>
+	<% end %>
+  </div>
 <% end %>
-<%= will_paginate @places %>
