Add photo simple form on place page

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -36,7 +36,10 @@ function initMap() {
   </div>
 </div>
 <div class="clear"></div>
-
+ <%= simple_form_for @photo, url: '#' do |f| %>
+   <%= f.input :picture %>
+   <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+ <% end %>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
