--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -36,8 +36,10 @@ function initMap() {
   </div>
 </div>
 <div class="clear"></div>
- <%= simple_form_for @photo, url: '#' do |f| %>
+ <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+   <div class="modal-body">
    <%= f.input :picture %>
+   <%= f.input :caption %>
    <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
  <% end %>
 
@@ -60,6 +62,7 @@ function initMap() {
     <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
       </div>
      <% end %>
+
     </div>
   </div>
 </div>
@@ -72,6 +75,12 @@ function initMap() {
 </div>
 
 <div class="clear"></div>
+
+<h1>Photos</h1>
+ <% @place.photos.each do |photo| %>
+      <%= image_tag photo.picture %>
+      <%= photo.caption %>
+ <% end %>
 
 <% @place.comments.each do |comment| %>
   <div class="col-xs-12 col-sm-6">
