--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -36,12 +36,38 @@ function initMap() {
   </div>
 </div>
 <div class="clear"></div>
- <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+ 
+
+ <!-- Button trigger modal -->
+<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Add a photo
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel-photo" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel-photo">Add a Photo</h4>
+      </div>
+<%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
    <div class="modal-body">
    <%= f.input :picture %>
    <%= f.input :caption %>
+</div>
+   <div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
    <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+   </div>
  <% end %>
+
+
+    </div>
+  </div>
+</div>
+
+<h1>Photos</h1>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -52,7 +78,6 @@ function initMap() {
         <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
       </div>
 <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-
   <div class="modal-body">
 	<%= f.input :message %>
 	<%= f.input :rating, as: :select, collection: Comment::RATINGS %>
