--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -39,12 +39,12 @@ function initMap() {
  
 
  <!-- Button trigger modal -->
-<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal-photo">
   Add a photo
 </button>
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel-photo" aria-hidden="true">
+<div class="modal fade" id="myModal-photo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -66,8 +66,6 @@ function initMap() {
     </div>
   </div>
 </div>
-
-<h1>Photos</h1>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -92,7 +90,6 @@ function initMap() {
   </div>
 </div>
 <div class="col-xs-10 col-xs-offset-1">
-  <h1 class="pull-left">Comments</h1>
   <!-- Button trigger modal -->
   <button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
   Add a comment
@@ -101,12 +98,17 @@ function initMap() {
 
 <div class="clear"></div>
 
-<h1>Photos</h1>
+<h1 class="pull-left">Photos</h1>
  <% @place.photos.each do |photo| %>
+   <div class="col-xs-12 col-sm-6">
+     <blockquote>
       <%= image_tag photo.picture %>
       <%= photo.caption %>
+     </blockquote>
+   </div>
  <% end %>
 
+  <h1 class="pull-left">Comments</h1>
 <% @place.comments.each do |comment| %>
   <div class="col-xs-12 col-sm-6">
     <blockquote>
