--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -30,18 +30,16 @@ function initMap() {
 <br />
   <div class="pull-right">
   	<% if current_user && current_user == @place.user %>
+      <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal-photo">
+      Add a photo
+      </button>
   		<%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
   		<%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
   	<% end %>
   </div>
 </div>
-<div class="clear"></div>
- 
 
- <!-- Button trigger modal -->
-<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal-photo">
-  Add a photo
-</button>
+<div class="clear"></div>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal-photo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -51,22 +49,22 @@ function initMap() {
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="myModalLabel-photo">Add a Photo</h4>
       </div>
-<%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
-   <div class="modal-body">
-   <%= f.input :picture %>
-   <%= f.input :caption %>
-</div>
-   <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-   <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
-   </div>
+      <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+        <div class="modal-body">
+          <%= f.input :picture %>
+          <%= f.input :caption %>
+        </div>
+      <div class="modal-footer">
+         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+         <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+      </div>
  <% end %>
 
 
     </div>
   </div>
 </div>
-
+<div class="clear"></div>
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
@@ -89,6 +87,7 @@ function initMap() {
     </div>
   </div>
 </div>
+
 <div class="col-xs-10 col-xs-offset-1">
   <!-- Button trigger modal -->
   <button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
@@ -99,16 +98,18 @@ function initMap() {
 <div class="clear"></div>
 
 <h1 class="pull-left">Photos</h1>
+ <div class="clear"></div>
+<!-- <div class="photoframe"> -->
  <% @place.photos.each do |photo| %>
-   <div class="col-xs-12 col-sm-6">
-     <blockquote>
-      <%= image_tag photo.picture %>
+    <div class="photoframe col-xs-12 col-sm-6">
+      <%= image_tag photo.picture, :class => 'img-responsive' %> 
       <%= photo.caption %>
-     </blockquote>
-   </div>
+    </div>
  <% end %>
-
+ <div class="clear"></div>
+ <!-- </div> -->
   <h1 class="pull-left">Comments</h1>
+  <div class="clear"></div>
 <% @place.comments.each do |comment| %>
   <div class="col-xs-12 col-sm-6">
     <blockquote>
