--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -4,6 +4,9 @@
 	  <br />
 	  <i><%= place.address %></i><br /><br />
 	  <p><%= place.description %></p><br />
+	  <% if place.photos.last.present? && place.photos.last.picture.present? %>
+	  <p><%= image_tag place.photos.last.picture %></p>
+	  <% end %>
 
 	  <% if place.user.present? %>
 	    <small><%= place.user.email %></small>
@@ -11,11 +14,11 @@
 	  <% if place.comments.present? %>
 	  <div class="col-xs-12 col-sm-6">
   		<blockquote>
-    	  <% if place.comments.last.humanized_rating.present? %>
-      		<b><%= place.comments.last.humanized_rating %></b> -
+    	  <% if place.comments.first.humanized_rating.present? %>
+      		<b><%= place.comments.first.humanized_rating %></b> -
     	  <% end %>
-          <%= place.comments.last.message %>
-          <small><%= place.comments.last.user.email %></small>
+          <%= place.comments.first.message %>
+          <small><%= place.comments.first.user.email %></small>
   	    </blockquote>
 	</div>
 	<% end %>
