Create action mailer

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -5,7 +5,9 @@
 	  <i><%= place.address %></i><br /><br />
 	  <p><%= place.description %></p><br />
 	  <% if place.photos.last.present? && place.photos.last.picture.present? %>
+	  <div class="photoframe col-xs-12 col-sm-6">
 	  <p><%= image_tag place.photos.last.picture %></p>
+	  </div>
 	  <% end %>
 
 	  <% if place.user.present? %>
