--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -60,7 +60,7 @@ blockquote p {
 }
 .photoframe {
   background: #f9f9f9;
-  border-left: 10px solid #ccc;
+  border: 1px solid #ccc;
   margin: 1.5em 10px;
   padding: 0.5em 10px;
 }
