--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the photos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.photoframe {
+  background: #f9f9f9;
+  border: 1px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+}
