Add css styling to photo boxes on place page

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -3,6 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .photoframe {
+  height: 200px;
+  width: 100%;
   background: #f9f9f9;
   border: 1px solid #ccc;
   margin: 1.5em 10px;
