--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -59,9 +59,14 @@ blockquote p {
   display: inline;
 }
 .photoframe {
-  background: #f9f9f9;
-  border: 1px solid #ccc;
-  margin: 1.5em 10px;
-  padding: 0.5em 10px;
-}
+    -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+	-webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+	box-shadow: 1px 1px 2px 0 #d0d0d0;
+	background: #fff;
+	border: 1px solid #ccc;
+	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+	margin-top:10px;
+	margin-bottom:15px;
+	padding:20px;
+  }
 
