Adjust automated email mailer

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -69,4 +69,13 @@ blockquote p {
 	margin-bottom:15px;
 	padding:20px;
   }
+ .index-photoframe {
+  	position: relative;
+    display: block;
+    img {
+    	width: 100%;
+    	display: block;
+
+    }
+  }
 
