--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,22 +1,42 @@
+ 
+ <script>
+
+function initMap() {
+	var markers = [];
+  <% @places.each do |place| %>
+	<% if place.latitude.present? && place.longitude.present? %>
+      markers.push({name: "<%= place.name %>", location: {lat: <%= place.latitude %>, lng: <%= place.longitude %>}});
+    <% end %>
+  <% end %>
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 10,
+    center: {lat: 36.0851211547852, lng: -121.547515869141}
+  });
+  function addMarkerToMap(element, index, array) {  
+  	new google.maps.Marker({
+    position: element.location,
+    map: map,
+    title: element.name
+  	});
+  };
+
+  markers.forEach(addMarkerToMap);
+  
+}
+
+    </script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>
+<div id="map"></div>
 <% @places.each do |place| %>
 	<div class="booyah-box col-xs-10 col-xs-offset-1"> 
+	<div class="col-sm-6">
 	  <h1><%= link_to place.name, place_path(place) %></h1>
 	  <br />
 	  <i><%= place.address %></i><br /><br />
 	  <p><%= place.description %></p><br />
-	  <% if place.photos.last.present? && place.photos.last.picture.present? %>
-	  <div class="col-xs-12 col-sm-6">
-	  <photoframe>
-	  <p><%= image_tag place.photos.last.picture %></p>
-	  </photoframe>
-	  </div>
-	  <% end %>
-
-	  <% if place.user.present? %>
-	    <small><%= place.user.email %></small>
-	    <% end %>
 	  <% if place.comments.present? %>
-	  <div class="col-xs-12 col-sm-6">
+	  
   		<blockquote>
     	  <% if place.comments.first.humanized_rating.present? %>
       		<b><%= place.comments.first.humanized_rating %></b> -
@@ -26,5 +46,14 @@
   	    </blockquote>
 	</div>
 	<% end %>
+	  <% if place.photos.last.present? && place.photos.last.picture.present? %>
+	  <div class="col-sm-6">
+	  <div class="index-photoframe">
+	  <%= image_tag place.photos.last.picture %>
+	  </div>
+	  </div>
+	  <% end %>
+
+
   </div>
 <% end %>
