--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,33 +1,43 @@
- 
- <script>
+ <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
 
-function initMap() {
-	var markers = [];
-  <% @places.each do |place| %>
-	<% if place.latitude.present? && place.longitude.present? %>
-      markers.push({name: "<%= place.name %>", location: {lat: <%= place.latitude %>, lng: <%= place.longitude %>}});
-    <% end %>
-  <% end %>
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 10,
-    center: {lat: 36.0851211547852, lng: -121.547515869141}
-  });
-  function addMarkerToMap(element, index, array) {  
-  	new google.maps.Marker({
-    position: element.location,
-    map: map,
-    title: element.name
-  	});
-  };
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <%= image_tag 'slider1.jpg' %>
+      <div class="carousel-caption">
+        Beautiful coastlines
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'slider3.jpg' %>
+      <div class="carousel-caption">
+        Jellyfish at the Monterey Bay Aquarium
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag 'slider2.jpg' %>
+      <div class="carousel-caption">
+        Redwood forests
+      </div>
+  </div>
 
-  markers.forEach(addMarkerToMap);
-  
-}
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
-    </script>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>
-<div id="map"></div>
 <% @places.each do |place| %>
 	<div class="booyah-box col-xs-10 col-xs-offset-1"> 
 	<div class="col-sm-6">
@@ -57,3 +67,33 @@ function initMap() {
 
   </div>
 <% end %>
+<div class="clear"></div>
+ <script>
+
+function initMap() {
+	var markers = [];
+  <% @places.each do |place| %>
+	<% if place.latitude.present? && place.longitude.present? %>
+      markers.push({name: "<%= place.name %>", location: {lat: <%= place.latitude %>, lng: <%= place.longitude %>}});
+    <% end %>
+  <% end %>
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 10,
+    center: {lat: 36.0851211547852, lng: -121.547515869141}
+  });
+  function addMarkerToMap(element, index, array) {  
+  	new google.maps.Marker({
+    position: element.location,
+    map: map,
+    title: element.name
+  	});
+  };
+
+  markers.forEach(addMarkerToMap);
+  
+}
+
+    </script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>
+<div id="map"></div>
