--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -9,19 +9,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <%= image_tag 'slider1.jpg' %>
+      <%= image_tag 'slider1.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
         Beautiful coastlines
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider3.jpg' %>
+      <%= image_tag 'slider3.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
         Jellyfish at the Monterey Bay Aquarium
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider2.jpg' %>
+      <%= image_tag 'slider5.jpg', class: 'img-responsive'  %>
       <div class="carousel-caption">
         Redwood forests
       </div>
