Fix carousel indicators

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -11,13 +11,13 @@
     <div class="item active">
       <%= image_tag 'slider1.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Beautiful coastlines
+        Stunning ocean views
       </div>
     </div>
     <div class="item">
       <%= image_tag 'slider3.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Jellyfish at the Monterey Bay Aquarium
+        Monterey Bay Aquarium
       </div>
     </div>
     <div class="item">
@@ -36,6 +36,7 @@
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+</div>
 </div>
 
 <% @places.each do |place| %>
