--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -25,7 +25,7 @@ body {
 	margin-bottom: 0;
 }
 .navbar-inverse .navbar-brand {
-	color: #8AEDE7;
+	color: #339966;
 	font-family: 'glacial_indifferenceregular', sans-serif;
 	font-size: 26px;
 	font-weight: bold;
@@ -77,7 +77,6 @@ blockquote p {
     img {
     	width: 100%;
     	display: block;
-
     }
   }
   .carousel {
