--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -113,8 +113,8 @@ function initMap() {
 <% @place.comments.each do |comment| %>
   <div class="col-xs-12 col-sm-6">
     <blockquote>
-      <% if comment.humanized_rating.present? %>
-      <b><%= comment.humanized_rating %></b> 
+      <% if comment.humanized_rating.present? %> 
+      <b><%= comment.humanized_rating %></b> -
       <% end %>
          <%= comment.message %>
       <small><%= comment.user.email %></small>
