--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
 	  <h2 class="text-center"><%= link_to comment.place.name, place_path(comment.place) %></h2>
     <blockquote>
       <% if comment.humanized_rating.present? %>
-      <b><%= comment.humanized_rating %></b> 
+      <b><%= comment.humanized_rating %></b> -
       <% end %>
          <%= comment.message %>
       <small><%= comment.user.email %></small>
