Fix nesting place issue on index page

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -38,7 +38,7 @@
   </a>
 </div>
 </div>
-
+<div class="clear"></div>
 <% @places.each do |place| %>
 	<div class="booyah-box col-xs-10 col-xs-offset-1"> 
 	<div class="col-sm-6">
@@ -59,8 +59,9 @@
           <%= place.comments.first.message %>
           <small><%= place.comments.first.user.email %></small>
   	    </blockquote>
-	</div>
-	<% end %>
+   <% end %>
+	 </div>
+	
 	  <% if place.photos.last.present? && place.photos.last.picture.present? %>
 	  <div class="col-sm-6">
 	  <div class="index-photoframe">
@@ -73,7 +74,9 @@
   </div>
 <% end %>
 </div>
+
 <div class="clear"></div>
+
 <div class="pagination">
 <%= will_paginate @places %>
 </div>
