Fix pagination styling

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -97,3 +97,14 @@ blockquote p {
 	position:absolute;
 	left:0;
 }
+.pagination-wrapper {
+	width: 300px;
+	margin: 0 auto; 
+}
+.pagination {
+	font-family: 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 20px;
+}
+
+
+
