--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -69,14 +69,14 @@
 	  </div>
 	  </div>
 	  <% end %>
-
-
   </div>
 <% end %>
 </div>
 
 <div class="clear"></div>
 
+<div class="pagination-wrapper">
 <div class="pagination">
 <%= will_paginate @places %>
+</div>
 </div>
