--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -15,11 +15,19 @@ function initMap() {
     zoom: 12,
     center: myLatLng
   });
+
+  var infowindow = new google.maps.InfoWindow();
+
   var marker = new google.maps.Marker({
     position: myLatLng,
     map: map,
-    title: 'Hello World!'
+    title: "<%=@place.name %>"
   });
+  google.maps.event.addListener(marker, 'click', function() { 
+       infowindow.setContent(marker.title); 
+       infowindow.open(map, this);
+    }); 
+    return marker;  
 }
 
     </script>
