--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -81,7 +81,7 @@
 </div>
 </div>
 
-<div class="booyah-box col-xs-10 col-xs-offset-1">
+<div class="google maps markers">
 <!-- google maps showing all markers on a single map -->
 <script>
 
