--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -17,7 +17,7 @@ h1, h2, h3, h4 {
 }
 body {
 	background: #eeeeee;//url('/assets/stitched_wool.png');
-	font-family: 'glacial_indifferenceregular', sans-serif;
+	font-family: sans-serif;
 }
 .navbar.navbar-inverse {
 	background: url('/assets/noisy_net.png');
@@ -92,7 +92,7 @@ blockquote p {
   	width: 100%;
   }
 .carousel-caption {
-	font-family: 'glacial_indifferenceregular', sans-serif;
+	font-family: sans-serif;
 	font-size: 60px;
 	font-weight:100;
 	text-shadow: rgba(0,0,0,0.95) 2px 2px;
