--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -9,14 +9,15 @@
 	margin-top:10px;
 	margin-bottom:15px;
 	padding:20px;
-	//border-radius:10px;
+	border:10px;
 }
+
 h1, h2, h3, h4 {
 	margin:0;
 	padding:0;
 }
 body {
-	background: #eeeeee;//url('/assets/stitched_wool.png');
+	background: #eeeeee;
 	font-family: sans-serif;
 }
 .navbar.navbar-inverse {
@@ -24,12 +25,17 @@ body {
 	border-radius: 0;
 	box-shadow: 0px 1px 3px #2a2a2a;
 	margin-bottom: 0;
+  font-size: 18px;
 }
 .navbar-inverse .navbar-brand {
 	color: #339966;
 	font-family: 'glacial_indifferenceregular', sans-serif;
 	font-size: 26px;
 	font-weight: bold;
+}
+button.btn.btn-default.navbar-btn {
+  background-color: #80d5ab;
+  font-size: 18px;
 }
 .field_with_errors {
 	color: #ff3333;
@@ -85,7 +91,7 @@ blockquote p {
     }
   }
   .carousel {
-  	//box-shadow: 0px 3px 8px #2a2a2a;
+  background-color: rgba(0,0,0,0.1);
   }
  .carousel-inner > .item > img, .carousel-inner > .item > a > img {
   	height: 550px;
@@ -96,14 +102,14 @@ blockquote p {
 	font-size: 60px;
 	font-weight:100;
 	text-shadow: rgba(0,0,0,0.95) 2px 2px;
-	background-color: rgba(0,0,0,0.5);
-	width:100%;
+  width:100%;
 	position:absolute;
 	left:0;
 }
 .pagination-wrapper {
 	width: 300px;
 	margin: 0 auto; 
+  text-align: center;
 }
 .pagination {
 	font-family: 'glacial_indifferenceregular', sans-serif;
