--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,8 @@
             <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
           <% else %>
             <li><%= link_to 'Sign in', new_user_session_path %></li>
-            <li><%= link_to 'Sign up', new_user_registration_path %></li>
+            <button type="button" class="btn btn-default navbar-btn"><%= link_to 'Sign up', new_user_registration_path %></button>
+            <!-- <li><%= link_to 'Sign up', new_user_registration_path %></li> -->
           <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
