--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
             <li><%= link_to 'Sign in', new_user_session_path %></li>
             <button type="button" class="btn btn-default navbar-btn"><%= link_to 'Sign up', new_user_registration_path %></button>
             <!-- <li><%= link_to 'Sign up', new_user_registration_path %></li> -->
+            <li><%= link_to 'Map', map_path %></li>
           <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
