--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -28,9 +28,9 @@
   </div>
 
   <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+  <span class="sr-only">Previous</span>
   </a>
   <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
@@ -39,12 +39,13 @@
 </div>
 </div>
 <div class="clear"></div>
+<!-- Places -->
 <% @places.each do |place| %>
 	<div class="booyah-box col-xs-10 col-xs-offset-1"> 
-	<div class="col-sm-6">
+	<div class="col-sm-8">
 	  <h1><%= link_to place.name, place_path(place) %></h1>
 	  <br />
-	  <i><%= place.address %></i><br /><br />
+	  <i><%= place.address %></i><br />
 	  <p><%= place.description %></p><br />
 
     <% if place.user.present? %>
@@ -61,9 +62,8 @@
   	    </blockquote>
    <% end %>
 	 </div>
-	
 	  <% if place.photos.last.present? && place.photos.last.picture.present? %>
-	  <div class="col-sm-6">
+	  <div class="col-sm-4">
 	  <div class="index-photoframe">
 	  <%= image_tag place.photos.last.picture %>
 	  </div>
@@ -74,52 +74,12 @@
 </div>
 
 <div class="clear"></div>
-</div>
 
-<div class="google maps markers">
-<!-- google maps showing all markers on a single map -->
-<script>
-
-function initMap() {
-  var markers = [];
-  <% @places.each do |place| %>
-  <% if place.latitude.present? && place.longitude.present? %>
-      markers.push({name: "<%= place.name %>", location: {lat: <%= place.latitude %>, lng: <%= place.longitude %>}});
-    <% end %>
-  <% end %>
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 10,
-    center: {lat: 36.4799, lng: -121.7328}
-  });
-
-  var infowindow = new google.maps.InfoWindow();
-  
-  var addMarkerToMap = function (element, index, array) {  
-    var marker = new google.maps.Marker({
-      position: element.location,
-      map: map,
-      title: element.name
-    });
-    google.maps.event.addListener(marker, 'click', function() { 
-       infowindow.setContent(marker.title); 
-       console.log("I have been clicked");
-       infowindow.open(map, this);
-    }); 
-    return marker;
-  };
-  markers.forEach(addMarkerToMap); 
-}
-
-</script>
-
-     <script async defer
-         src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>        
- <div id="map"></div>
-
-</div>
-<br/>
-<br class="clr" />
 <div class="pagination-wrapper">
 <div class="pagination">
 <%= will_paginate @places %>
 </div>
+</div>
+
+
+<div class="clear"></div>
