--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,19 +54,19 @@
   <%= yield %>
 
   </div>
-<!--   <div id="footer">
+  <div id="footer">
     <div class="container">
       <b>Footer Here</b>
       <br />
       <%= link_to 'Link', '#' %>
-    </div> -->
+    </div>
     <!-- Global-Footer -->
-  <footer class="global-footer">
+ <!--  <footer class="global-footer">
       <ul class="font-monthairline">
           <li><a href="#" class="color-white hover-orange global-hovertransition">Privacy Policy</a></li>
           <li><a class="color-white hover-orange global-hovertransition" href="#">Terms of Service</a></li>
       </ul>
-  </footer>
+  </footer> -->
 </div>
 </body>
 </html>
