Add comments header div style

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -15,13 +15,14 @@ body {
 }
 
 /* Set the fixed height of the footer here */
-#footer {
-  height:60px;
-  background: #339966;
-}
+// #footer {
+//   height:70px;
+//   background: #339966;
+//   font-color: white;
+// }
 
 .global-footer {
-  background: #26734d;
+  background: #999999;
    height:100px;
 }
 
