--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -74,12 +74,14 @@
 </div>
 
 <div class="clear"></div>
-
-<div class="pagination-wrapper">
-<div class="pagination">
+<div class="pagination-centered">
+  <ul>
 <%= will_paginate @places %>
+  </ul>
 </div>
-</div>
+
+
+
 
 <class="clear"/>
 <h1>Locations</h1>
