--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -108,16 +108,17 @@ function initMap() {
 <h1 class="pull-left">Photos</h1>
  <div class="clear"></div>
  <% @place.photos.each do |photo| %>
-     <div class="booyah-box col-xs-4 col-xs-offset-1">
+     <div class="booyah-box col-xs-2 col-xs-offset-1">
       <%= image_tag photo.picture, :class => 'img-responsive' %> 
       <%= photo.caption %>
     </div>
  <% end %> 
   </div> 
- <div class="clear"></div>
+<div class="clear"></div>
+<div class="comments">
+  <h1 class="comments pull-left">Comments</h1>
+  <div class="clear"></div>
 
-  <h1 class="pull-left">Comments</h1>
-   <div class="clear"></div>
 <% @place.comments.each do |comment| %>
   <div class="col-xs-12 col-sm-6">
     <blockquote>
@@ -128,5 +129,7 @@ function initMap() {
       <small><%= comment.user.email %></small>
     </blockquote>
   </div>
+
 <% end %>
+  </div>
  <div class="clear"></div>
