--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -76,7 +76,7 @@
 <div class="clear"></div>
 <div class="pagination-centered">
   <ul>
-<%= will_paginate @places %>
+<li><%= will_paginate @places %></li>
   </ul>
 </div>
 
