--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -88,7 +88,7 @@ blockquote {
 blockquote:before {
   color: #ccc;
   content: open-quote;
-  font-size: 4em;
+  font-size: 3em;
   line-height: 0.1em;
   margin-right: 0.25em;
   vertical-align: -0.4em;
@@ -96,27 +96,25 @@ blockquote:before {
 blockquote p {
   display: inline;
 }
-// .photoframe {
-//   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
-// 	-webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
-// 	box-shadow: 1px 1px 2px 0 #d0d0d0;
-// 	background: #fff;
-// 	border: 1px solid #ccc;
-// 	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-// 	margin-top:0px;
-// 	margin-bottom:0px;
-// 	padding:0px;
-// }
-// .index-photoframe {
-//   	position: relative;
-//     display: block;
-//     img {
-//     	width: 100%;
-//     	display: block;
-//       border-radius: 5px;
-//       border: 1px solid #2a2a2a;
-//     }
-// }
+.photoframe {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+	-webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+	// box-shadow: 1px 1px 2px 0 #d0d0d0;
+	background: #fff;
+	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+	margin-top:0px;
+	margin-bottom:0px;
+	padding:0px;
+}
+.index-photoframe {
+  	position: relative;
+    display: block;
+    img {
+    	width: 100%;
+    	display: block;
+      border-radius: 5px;
+    }
+}
 .carousel {
   background-color: rgba(0,0,0,0.1);
 }
@@ -125,7 +123,7 @@ blockquote p {
   	width: 100%;
 }
 .carousel-caption {
-	font-family: sans-serif;
+  font-family: montserratultra_light, Arial, sans-serif;
 	font-size: 60px;
 	font-weight:100;
 	text-shadow: rgba(0,0,0,0.95) 2px 2px;
@@ -133,15 +131,15 @@ blockquote p {
 	position:absolute;
 	left:0;
 }
-// .pagination-wrapper {
-// 	width: 300px;
-// 	margin: auto; 
-//   text-align: center;
-// }
-// .pagination {
-// 	font-family: montserratultra_light, Arial, sans-serif;
-// 	font-size: 14px;
-// }
+.pagination-wrapper {
+	width: 300px;
+	margin: auto; 
+  text-align: center;
+}
+.pagination {
+	font-family: montserratultra_light, Arial, sans-serif;
+	font-size: 14px;
+}
 
 .background-lightgray {
     background-color: #eeeeee;
@@ -227,3 +225,25 @@ h1.comments.pull-left {
   color: white;
 }
 
+div.places-index-header-container {
+background: url('/assets/noisy_net.png');
+background-color: rgba(0,0,0,0.5);
+height: 25px;
+box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+h1.pull-left {
+  color: black;
+  margin-left: 0px;
+  font-family: montserratultra_light, Arial, sans-serif;
+  font-size: 32px;
+  //font-weight: bold;
+}
+
+hr {
+    margin-top: 0px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid black;
+}
