--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -39,6 +39,18 @@
 </div>
 </div>
 <div class="clear"></div>
+<!-- Places header container --> 
+<div class="places-index-header-container">
+  <!-- <h1 class="pull-left">The Best of Monterey County</h1> -->
+
+  <div class="row col-xs-10 col-xs-offset-1">
+  <br/>
+  <h1 class="pull-left"><em>The Best of Monterey County</em></h1>
+      <br/>
+    </div>
+    <div class="clear"></div>
+  </div>
+
 <!-- Places -->
 <% @places.each do |place| %>
 	<div class="booyah-box col-xs-10 col-xs-offset-1"> 
@@ -83,46 +95,46 @@
 
 
 
-<class="clear"/>
-<h1>Locations</h1>
+
+<!-- <h1>Locations</h1>
 <div class="locations">
 <!-- google maps showing all markers on a single map -->
-<script>
-function initMap() {
-  var markers = [];
-  <% @places.each do |place| %>
-  <% if place.latitude.present? && place.longitude.present? %>
-      markers.push({name: "<%= place.name %>", location: {lat: <%= place.latitude %>, lng: <%= place.longitude %>}});
-    <% end %>
-  <% end %>
-  var map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 10,
-    center: {lat: 36.4799, lng: -121.7328}
-  });
-  var infowindow = new google.maps.InfoWindow();
+<!-- <script> 
+// function initMap() {
+//   var markers = [];
+//   <% @places.each do |place| %>
+//   <% if place.latitude.present? && place.longitude.present? %>
+//       markers.push({nÏme: "<%= place.name %>", location: {lat: <%= place.latitude %>, lng: <%= place.longitude %>}});
+//     <% end %>
+//   <% end %>
+//   var map = new google.maps.Map(document.getElementById('map'), {
+//     zoom: 10,
+//     center: {lat: 36.4799, lng: -121.7328}
+//   });
+//   var infowindow = new google.maps.InfoWindow();
   
-  var addMarkerToMap = function (element, index, array) {  
-    var marker = new google.maps.Marker({
-      position: element.location,
-      map: map,
-      title: element.name
-    });
-    google.maps.event.addListener(marker, 'click', function() { 
-       infowindow.setContent(marker.title); 
-       console.log("I have been clicked");
-       infowindow.open(map, this);
-    }); 
-    return marker;
-  };
-  markers.forEach(addMarkerToMap); 
-}
-</script>
+//   var addMarkerToMap = function (element, index, array) {  
+//     var marker = new google.maps.Marker({
+//       position: element.location,
+//       map: map,
+//       title: element.name
+//     });
+//     google.maps.event.addListener(marker, 'click', function() { 
+//        infowindow.setContent(marker.title); 
+//        console.log("I have been clicked");
+//        infowindow.open(map, this);
+//     }); 
+//     return marker;
+//   };
+//   markers.forEach(addMarkerToMap); 
+// }
+</script> --> 
 
-     <script async defer
-         src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>        
- <div id="map"></div>
+<!-- //      <script async defer
+//          src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>        
+//  <div id="map"></div>
 
-</div>
-<br/>
-<br class="clr" />
-<div class="clear"></div>
+// </div>
+// <br/>
+// <br class="clr" /> -->
+ <div class="clear"></div> 
