--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -11,19 +11,19 @@
     <div class="item active">
       <%= image_tag 'slider1.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Big Sur Beaches
+<!--         Big Sur Beaches -->
       </div>
     </div>
     <div class="item">
       <%= image_tag 'slider3.jpg', class: 'img-responsive' %>
       <div class="carousel-caption">
-        Monterey Bay Aquarium
+<!--         Monterey Bay Aquarium -->
       </div>
     </div>
     <div class="item">
       <%= image_tag 'slider5.jpg', class: 'img-responsive'  %>
       <div class="carousel-caption">
-        Redwood Forests
+<!--         Redwood Forests -->
       </div>
   </div>
 
@@ -55,7 +55,7 @@
 <% @places.each do |place| %>
 	<div class="booyah-box col-xs-10 col-xs-offset-1"> 
 	<div class="col-sm-8">
-	  <h1><%= link_to place.name, place_path(place) %></h1>
+	  <h2><%= link_to place.name, place_path(place) %></h2>
 	  <br />
 	  <i><%= place.address %></i><br />
 	  <p><%= place.description %></p><br />
@@ -91,50 +91,4 @@
 <li><%= will_paginate @places %></li>
   </ul>
 </div>
-
-
-
-
-
-<!-- <h1>Locations</h1>
-<div class="locations">
-<!-- google maps showing all markers on a single map -->
-<!-- <script> 
-// function initMap() {
-//   var markers = [];
-//   <% @places.each do |place| %>
-//   <% if place.latitude.present? && place.longitude.present? %>
-//       markers.push({nÏme: "<%= place.name %>", location: {lat: <%= place.latitude %>, lng: <%= place.longitude %>}});
-//     <% end %>
-//   <% end %>
-//   var map = new google.maps.Map(document.getElementById('map'), {
-//     zoom: 10,
-//     center: {lat: 36.4799, lng: -121.7328}
-//   });
-//   var infowindow = new google.maps.InfoWindow();
-  
-//   var addMarkerToMap = function (element, index, array) {  
-//     var marker = new google.maps.Marker({
-//       position: element.location,
-//       map: map,
-//       title: element.name
-//     });
-//     google.maps.event.addListener(marker, 'click', function() { 
-//        infowindow.setContent(marker.title); 
-//        console.log("I have been clicked");
-//        infowindow.open(map, this);
-//     }); 
-//     return marker;
-//   };
-//   markers.forEach(addMarkerToMap); 
-// }
-</script> --> 
-
-<!-- //      <script async defer
-//          src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>        
-//  <div id="map"></div>
-
-// </div>
-// <br/>
-// <br class="clr" /> -->
  <div class="clear"></div> 
