--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -105,10 +105,10 @@ function initMap() {
 
 <div class="clear"></div>
 
-<h1 class="pull-left">Photos</h1>
+<h1 class="photos pull-left">Photos</h1>
  <div class="clear"></div>
  <% @place.photos.each do |photo| %>
-     <div class="booyah-box col-xs-2 col-xs-offset-1">
+     <div class="booyah-box col-xs-3 col-xs-offset-1">
       <%= image_tag photo.picture, :class => 'img-responsive' %> 
       <%= photo.caption %>
     </div>
