--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -6,9 +6,9 @@
 	background: #fff;
 	border: 1px solid #ccc;
 	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  border-radius: 5px;
-	margin-top:5px;
-	margin-bottom:5px;
+  // border-radius: 5px;
+	margin-top:1px;
+	margin-bottom:1px;
 	padding:15px;
 	border:10px;
 }
@@ -145,7 +145,8 @@ blockquote p {
 }
 
 .carousel {
-  background-color: rgba(0,0,0,0.1);    
+  background-color: rgba(0,0,0,0.1);
+  margin-bottom: 50px;    
 }   
 
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {    
@@ -299,7 +300,7 @@ img.img-responsive {
   background: red;
 }
 
-div.index-header {
+div.index-container {
   background-color: red;
 }
 
