--- a/app/views/places/map.html.erb
+++ b/app/views/places/map.html.erb
@@ -1,5 +1,11 @@
-<class="clear"/>
-<h1>Locations</h1>
+ <div class="clear"></div> 
+<div class="location-header-container">
+  <div class="booyah-box col-xs-12">
+  <h1 class="pull-left">Monterey Locations <small>| Treasure Map</small></h1>
+  <br/>
+  </div>
+</div>
+  <div class="clear">
 <div class="locations">
 <!-- google maps showing all markers on a single map -->
 <script>
@@ -40,10 +46,17 @@ function initMap() {
 </div>
 <br/>
 <br class="clr" />
-
-<p>View stunning coastline and sweeping vistas, play a world-class round of golf, enjoy gourmet cuisine. But, don't forget to check out some of these gems along the way. Need a sandwich for your hike? A chill bar to play a game of darts? Check out these places off the beaten path and take refuge from crowds of summer tourists.
-        </p>
-        <br/>
-        <p>
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. 
-      </p>
+<div class="location-text-container">
+<h2>Like What You See?</h2>
+<br/>
+<br/>
+  <p>
+  View stunning coastline and sweeping vistas, play a world-class round of golf, enjoy gourmet cuisine. But, don't forget to check out some of these gems along the way. Need a sandwich for your hike? A chill bar to play a game of darts? Check out these places off the beaten path and take refuge from crowds of summer tourists.
+    </p>
+  <br/>
+  <p>
+  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. 
+</p>
+</div>
+ <div class="clear"></div> 
+ </div>
