--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,9 +1,10 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
+<div class="place-info">
   <h1><%= @place.name %></h1>
   <i><%= @place.address %></i>
   <br/><br/>
   <p><%= @place.description %></p>
-
+  </div>
 <% if @place.latitude.present? && @place.longitude.present? %>
 
     <script>
@@ -34,6 +35,11 @@ function initMap() {
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>
 <div id="map"></div>
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+  Add a comment
+  </button>
+
 <% end %>
 <br />
   <div class="pull-right">
@@ -98,22 +104,28 @@ function initMap() {
 
 <div class="col-xs-10 col-xs-offset-1">
   <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+<!--   <button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
   Add a comment
-  </button>
+  </button> -->
 </div>
 
 <div class="clear"></div>
 
-<h1 class="photos pull-left">Photos</h1>
+<div class="location-header-container">
+  <div class="booyah-box col-xs-10 col-xs-offset-1">
+  <h1 class="pull-left">Photos</h1>
+  <br/>
+  </div>
  <div class="clear"></div>
  <% @place.photos.each do |photo| %>
-     <div class="booyah-box col-xs-3 col-xs-offset-1">
+ <div class="col-xs-3 col-xs-offset-1">
       <%= image_tag photo.picture, :class => 'img-responsive' %> 
       <%= photo.caption %>
-    </div>
- <% end %> 
-  </div> 
+  </div>
+
+  <% end %> 
+      </div>
+      </div>
 <div class="clear"></div>
 <div class="comments">
   <h1 class="comments pull-left">Comments</h1>
