Fix header on index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
   <!-- sticky footer -->
   <%= yield %>
 
-  </div>
+  </div> <!-- end wrap -->
 <!--   <div id="footer">
     <div class="container">
       <b>Footer Here</b>
