--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -29,12 +29,12 @@
 //   border:10px;
  }
 
-.booyah-box h1 {
-  font-size: 22px;
-  text-align: left;
-  margin: 0;
-  padding: 0;
-}
+// .booyah-box h1 {
+//   font-size: 22px;
+//   text-align: left;
+//   margin: 0;
+//   padding: 0;
+// }
 
 .header-box h1 {
   font-size: 52px;
@@ -98,13 +98,13 @@ button.btn.btn-default.navbar-btn {
 	clear: both;
 }
 
-h1 {
-  font-family: montserratultra_light, Arial, sans-serif;
-  font-size: 36px;
-  text-align: center;
-  //padding-top: 50px;
-  padding-bottom: 30px;
-}
+// h1 {
+//   font-family: montserratultra_light, Arial, sans-serif;
+//   font-size: 36px;
+//   text-align: center;
+//   //padding-top: 50px;
+//   padding-bottom: 30px;
+// }
 blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
@@ -271,9 +271,9 @@ h1.photos.pull-left {
 // box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 // }
 
-h1.pull-left {
-  color: black;
-  margin-left: 0px;
+h1 {
+  color: #595959;
+  // margin-left: 0px;
   font-family: montserratultra_light, Arial, sans-serif;
   font-size: 48px;
   //font-weight: bold;
@@ -287,7 +287,7 @@ hr {
     margin-top: 0px;
     margin-bottom: 20px;
     border: 0;
-    border-top: 1px solid black;
+    border-top: 2px solid #eeeeee;
 }
 
 img.img-responsive {
