--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -40,9 +40,9 @@
 </div>
 <div class="clear"></div>
   <div class="booyah-box col-xs-10 col-xs-offset-1"> 
-  <h1 class="pull-left">The Best of Monterey <small>| Off the Beaten Path</small></h1>
-  </div>
-
+  <h1>The Best of Monterey | <small>Off the Beaten Path</small></h1>
+  <br class="clr"/>
+<hr />
 <!-- Places -->
 <% @places.each do |place| %>
   <div class="booyah-box col-xs-10 col-xs-offset-1"> 
