--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -42,7 +42,7 @@ function initMap() {
 
 <% end %>
 <br />
-  <div class="pull-right">
+  <div class="pull-left">
   	<% if current_user && current_user == @place.user %>
       <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal-photo">
       Add a photo
