--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="booyah-box col-xs-10 col-xs-offset-1"
+<div class="booyah-box col-xs-10 col-xs-offset-1">
 <h1>Edit Your Place</h1>
 <br />
 <%= simple_form_for @place do |f| %>
