--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -49,9 +49,8 @@
 	<div class="col-sm-8 col-xs-12">
 	  <h2><%= link_to place.name, place_path(place) %></h2>
 	  <br />
-	  <i><%= place.address %></i><br />
-	  <p><%= place.description %></p><br />
-
+	  <i><%= place.address %></i>
+	  <p><%= place.description %></p>
     <% if place.user.present? %>
     <small><%= place.user.email %></small>
     <% end %>
