--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -107,23 +107,23 @@ function initMap() {
 <!--   <button type="button" class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
   Add a comment
   </button> -->
-</div>
+
 
 <div class="clear"></div>
 
 <div class="location-header-container">
-  <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1 class="pull-left">Photos</h1>
-  <br/>
+
+  <h1>Photos</h1>
   </div>
  <div class="clear"></div>
  <% @place.photos.each do |photo| %>
- <div class="col-xs-3 col-xs-offset-1">
+ <div class="col-xs-12 col-sm-4">
       <%= image_tag photo.picture, :class => 'img-responsive' %> 
       <%= photo.caption %>
   </div>
 
   <% end %> 
+  </div>
       </div>
       </div>
 <div class="clear"></div>
